# 03macro

./: Cargo.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto_debug.rs  auto_deref.rs  lib.rs
