[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
